--- a/src/Termy.csproj
+++ b/src/Termy.csproj
@@ -6,9 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.Proxy" Version="1.2.2" />
-    <PackageReference Include="Docker.DotNet" Version="3.125.0" />
-    <PackageReference Include="KubernetesClient" Version="0.2.0-beta" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel.Https" Version="2.0.0" />
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="3.0.3" />
   </ItemGroup>
 
