--- a/src/Core/tsconfig.json
+++ b/src/Core/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "noImplicitAny": false,
-    "outDir": "./wwwroot/dist/",
+    "outDir": "./obj/wwwroot",
     "rootDir": "./wwwroot/",
     "sourceMap": true,
     "strict": true,
