--- a/src/Core/package.json
+++ b/src/Core/package.json
@@ -8,12 +8,13 @@
   "flat": true,
   "scripts": {
     "start": "webpack-dev-server --open --config ./webpack.dev.conf.js",
-    "build": "webpack --config ./webpack.prod.conf.js", 
-    "builddev": "webpack --config ./webpack.prod.conf.js"
+    "build": "webpack --config ./webpack.prod.conf.js",
+    "builddebug": "webpack --config ./webpack.debug.conf.js"
   },
   "dependencies": {
+    "@polymer/paper-card": "next",
     "@polymer/polymer": "next",
-    "@webcomponents/webcomponentsjs": "1.0.14"
+    "@webcomponents/webcomponentsjs": "1.1.1"
   },
   "devDependencies": {
     "clean-webpack-plugin": "0.1.17",
@@ -29,35 +30,59 @@
   "resolutions": {
     "glob": "7.1.2",
     "inherits": "2.0.3",
-    "bluebird": "3.5.0",
-    "is-glob": "3.1.0",
+    "bluebird": "3.5.1",
+    "is-glob": "4.0.0",
     "loader-utils": "1.1.0",
     "is-extglob": "2.1.1",
-    "uglify-js": "3.1.2",
+    "source-map": "0.6.1",
+    "uglify-js": "3.3.16",
     "utila": "0.4.0",
     "strip-ansi": "4.0.0",
     "domutils": "1.5.1",
     "domelementtype": "1.3.0",
-    "readable-stream": "2.3.3",
+    "readable-stream": "2.3.5",
     "isarray": "1.0.0",
     "string_decoder": "1.0.3",
     "ansi-regex": "3.0.0",
-    "acorn": "5.1.2",
-    "ajv": "5.2.3",
-    "async": "2.5.0",
+    "supports-color": "5.3.0",
+    "has-flag": "3.0.0",
+    "acorn": "5.5.3",
+    "ajv": "5.5.2",
+    "async": "2.6.0",
     "yargs": "8.0.2",
     "minimist": "1.2.0",
     "punycode": "1.4.1",
     "hash-base": "3.0.4",
     "camelcase": "4.1.0",
     "cliui": "3.2.0",
-    "kind-of": "4.0.0",
+    "kind-of": "6.0.2",
+    "chokidar": "2.0.3",
+    "anymatch": "2.0.0",
+    "braces": "2.3.1",
+    "glob-parent": "3.1.0",
+    "micromatch": "3.1.10",
+    "arr-diff": "4.0.0",
+    "array-unique": "0.3.2",
+    "define-property": "2.0.2",
+    "extend-shallow": "3.0.2",
+    "extglob": "2.0.4",
+    "is-descriptor": "1.0.2",
+    "isobject": "3.0.1",
+    "is-accessor-descriptor": "1.0.0",
+    "is-data-descriptor": "1.0.0",
+    "is-extendable": "1.0.1",
+    "expand-brackets": "2.1.4",
     "is-number": "3.0.0",
+    "has-value": "1.0.0",
+    "set-value": "2.0.0",
+    "has-values": "1.0.0",
+    "fill-range": "4.0.0",
     "string-width": "2.1.1",
     "is-fullwidth-code-point": "2.0.0",
     "qs": "6.5.1",
-    "uuid": "3.1.0",
+    "uuid": "3.2.1",
     "assert-plus": "1.0.0",
+    "extsprintf": "1.4.0",
     "os-locale": "2.1.0",
     "read-pkg-up": "2.0.0",
     "which-module": "2.0.0",
@@ -70,9 +95,12 @@
     "pify": "3.0.0",
     "strip-bom": "3.0.0",
     "array-flatten": "2.1.1",
+    "depd": "1.1.2",
     "setprototypeof": "1.1.0",
+    "mime": "1.6.0",
     "faye-websocket": "0.11.1",
-    "url-parse": "1.1.9",
-    "querystringify": "1.0.0"
+    "url-parse": "1.2.0",
+    "querystringify": "1.0.0",
+    "@polymer/polymer": "3.0.0-pre.12"
   }
 }
