--- a/src/Core/package.json
+++ b/src/Core/package.json
@@ -7,100 +7,129 @@
   "license": "MIT",
   "flat": true,
   "scripts": {
-    "start": "webpack-dev-server --open --config ./webpack.dev.conf.js",
-    "build": "webpack --config ./webpack.prod.conf.js",
-    "builddebug": "webpack --config ./webpack.debug.conf.js"
+    "build": "webpack --config ./webpack.prod.conf.js --mode production",
+    "builddebug": "webpack --config ./webpack.debug.conf.js --mode development"
   },
   "dependencies": {
+    "@polymer/iron-list": "next",
     "@polymer/paper-card": "next",
+    "@polymer/paper-item": "next",
     "@polymer/polymer": "next",
-    "@webcomponents/webcomponentsjs": "1.1.1"
+    "@webcomponents/webcomponentsjs": "1.1.1",
+    "browser-request": "0.3.3"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "0.1.17",
-    "copy-webpack-plugin": "4.1.0",
-    "html-loader": "0.5.1",
-    "html-webpack-plugin": "2.30.1",
-    "ts-loader": "2.3.7",
-    "typescript": "2.5.3",
-    "webpack": "3.6.0",
-    "webpack-dev-server": "2.9.1",
-    "webpack-shell-plugin": "^0.5.0"
+    "clean-webpack-plugin": "0.1.19",
+    "copy-webpack-plugin": "4.5.1",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.1.0",
+    "ts-loader": "4.1.0",
+    "typescript": "2.7.2",
+    "webpack": "4.4.1",
+    "webpack-cli": "2.0.13",
+    "webpack-dev-server": "3.1.1",
+    "webpack-shell-plugin": "0.5.0"
   },
   "resolutions": {
-    "glob": "7.1.2",
+    "rimraf": "2.6.2",
     "inherits": "2.0.3",
-    "bluebird": "3.5.1",
+    "globby": "7.1.1",
     "is-glob": "4.0.0",
     "loader-utils": "1.1.0",
+    "pify": "3.0.0",
+    "path-type": "3.0.0",
+    "y18n": "4.0.0",
+    "readable-stream": "2.3.5",
+    "isarray": "1.0.0",
+    "string_decoder": "1.1.1",
+    "minimist": "1.2.0",
+    "find-up": "2.1.0",
+    "path-exists": "3.0.0",
     "is-extglob": "2.1.1",
+    "recast": "0.14.7",
+    "ast-types": "0.11.3",
+    "esprima": "4.0.0",
     "source-map": "0.6.1",
-    "uglify-js": "3.3.16",
+    "commander": "2.15.1",
     "utila": "0.4.0",
     "strip-ansi": "4.0.0",
     "domutils": "1.5.1",
     "domelementtype": "1.3.0",
-    "readable-stream": "2.3.5",
-    "isarray": "1.0.0",
-    "string_decoder": "1.0.3",
     "ansi-regex": "3.0.0",
-    "supports-color": "5.3.0",
-    "has-flag": "3.0.0",
-    "acorn": "5.5.3",
-    "ajv": "5.5.2",
-    "async": "2.6.0",
-    "yargs": "8.0.2",
-    "minimist": "1.2.0",
-    "punycode": "1.4.1",
-    "hash-base": "3.0.4",
-    "camelcase": "4.1.0",
-    "cliui": "3.2.0",
-    "kind-of": "6.0.2",
-    "chokidar": "2.0.3",
-    "anymatch": "2.0.0",
-    "braces": "2.3.1",
-    "glob-parent": "3.1.0",
+    "chalk": "2.3.2",
     "micromatch": "3.1.10",
+    "ansi-styles": "3.2.1",
+    "supports-color": "5.3.0",
     "arr-diff": "4.0.0",
     "array-unique": "0.3.2",
+    "braces": "2.3.1",
     "define-property": "2.0.2",
     "extend-shallow": "3.0.2",
     "extglob": "2.0.4",
-    "is-descriptor": "1.0.2",
+    "kind-of": "6.0.2",
+    "fill-range": "4.0.0",
     "isobject": "3.0.1",
+    "is-descriptor": "1.0.2",
     "is-accessor-descriptor": "1.0.0",
     "is-data-descriptor": "1.0.0",
     "is-extendable": "1.0.1",
+    "is-number": "4.0.0",
     "expand-brackets": "2.1.4",
-    "is-number": "3.0.0",
+    "debug": "3.1.0",
     "has-value": "1.0.0",
     "set-value": "2.0.0",
     "has-values": "1.0.0",
-    "fill-range": "4.0.0",
+    "ajv": "6.4.0",
+    "punycode": "2.1.0",
+    "hash-base": "3.0.4",
+    "glob-parent": "3.1.0",
     "string-width": "2.1.1",
     "is-fullwidth-code-point": "2.0.0",
     "qs": "6.5.1",
-    "uuid": "3.2.1",
     "assert-plus": "1.0.0",
     "extsprintf": "1.4.0",
-    "os-locale": "2.1.0",
-    "read-pkg-up": "2.0.0",
-    "which-module": "2.0.0",
-    "yargs-parser": "7.0.0",
-    "find-up": "2.1.0",
-    "read-pkg": "2.0.0",
-    "path-exists": "3.0.0",
-    "load-json-file": "2.0.0",
-    "path-type": "2.0.0",
-    "pify": "3.0.0",
+    "cross-spawn": "6.0.5",
+    "got": "8.3.0",
+    "inquirer": "5.2.0",
+    "jscodeshift": "0.5.0",
+    "log-symbols": "2.2.0",
+    "yargs": "11.0.0",
+    "lowercase-keys": "1.0.1",
+    "p-cancelable": "0.4.0",
+    "p-timeout": "2.0.1",
+    "url-parse-lax": "3.0.0",
+    "prepend-http": "2.0.0",
+    "ansi-escapes": "3.1.0",
+    "cli-cursor": "2.1.0",
+    "figures": "2.0.0",
+    "restore-cursor": "2.0.0",
+    "onetime": "2.0.1",
+    "symbol-observable": "1.0.1",
+    "babylon": "7.0.0-beta.42",
+    "colors": "1.2.1",
+    "jsesc": "1.3.0",
+    "indent-string": "3.2.0",
+    "async": "2.6.0",
+    "cliui": "4.0.0",
+    "yargs-parser": "9.0.2",
+    "camelcase": "4.1.0",
+    "vinyl": "2.1.0",
+    "clone": "2.1.2",
+    "clone-stats": "1.0.0",
+    "replace-ext": "1.0.0",
     "strip-bom": "3.0.0",
+    "read-pkg-up": "3.0.0",
+    "read-pkg": "3.0.0",
+    "load-json-file": "4.0.0",
+    "parse-json": "4.0.0",
     "array-flatten": "2.1.1",
     "depd": "1.1.2",
     "setprototypeof": "1.1.0",
-    "mime": "1.6.0",
+    "statuses": "1.5.0",
+    "http-errors": "1.6.3",
+    "mime": "2.2.2",
     "faye-websocket": "0.11.1",
     "url-parse": "1.2.0",
-    "querystringify": "1.0.0",
-    "@polymer/polymer": "3.0.0-pre.12"
+    "querystringify": "1.0.0"
   }
 }
