--- a/src/Terminal/Dockerfile
+++ b/src/Terminal/Dockerfile
@@ -1,7 +1,7 @@
 # This is a test dockerfile.  The binary is normally mounted in Kubernetes.
 
 FROM ubuntu as builderimg
-RUN apt-get update && apt-get install -y curl && curl -sL https://deb.nodesource.com/setup_9.x | bash - && apt-get install -y nodejs && apt-get install -y build-essential
+RUN apt-get update && apt-get install -y wget gnupg curl && curl -sL https://deb.nodesource.com/setup_9.x | bash - && apt-get install -y nodejs && apt-get install -y build-essential
 
 FROM builderimg as builder
 WORKDIR /builder
