--- a/assets/terminal.yml
+++ b/assets/terminal.yml
@@ -23,7 +23,7 @@ spec:
         args: [ "while true; do sleep 30; done;" ]
         env:
         - name: PORT
-          value: "443"
+          value: "{{port}}"
         - name: PASSWORD
           value: "{{password}}"
         - name: SHELL
@@ -31,6 +31,7 @@ spec:
         ports:
         - containerPort: 80
         - containerPort: 443
+        - containerPort: {{port}}
         volumeMounts:
         - name: termysecrets
           readOnly: true
