Allow user to specify CNAMEs to port 80 on created pods.

--- a/assets/termy-terminal-host.yml
+++ b/assets/termy-terminal-host.yml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   labels:
     terminal-run: {{name}}
+    cnames: "{{cnames}}"
   name: {{name}}
   namespace: {{namespace}}
 spec:
