--- a/assets/termy-terminal-ingress.yml
+++ b/assets/termy-terminal-ingress.yml
@@ -5,9 +5,9 @@ metadata:
   namespace: {{namespace}}
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
-    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
-    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
+    #nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
+    #nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
+    #nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
 spec:
   tls:
   - secretName: termy-secrets
