--- a/src/Core/Termy.csproj
+++ b/src/Core/Termy.csproj
@@ -17,7 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="build/**/*" CopyToPublishDirectory="PreserveNewest" />
+    <Content Include="build/**/*" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="../../assets/**/*" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
