--- a/src/Core/Termy.csproj
+++ b/src/Core/Termy.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <EnableDefaultContentItems>false</EnableDefaultContentItems>
   </PropertyGroup>
 
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <Content Include="build/**/*" CopyToOutputDirectory="PreserveNewest" />
-    <Content Include="../../assets/**/*" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="assets/**/*" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
