--- a/src/Core/package.json
+++ b/src/Core/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "typescript": "3.0.3",
-    "tslint": "5.11.0"
+    "tslint": "5.11.0",
+    "polymer-cli": "1.8.0"
   }
 }
