--- a/src/Core/package.json
+++ b/src/Core/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf bin && rm -rf obj && rm -rf buildts && rm -rf build",
+    "buildclient": "tsc && polymer build",
     "build": "tsc && polymer build && dotnet publish -c Release",
     "builddebug": "tsc && polymer build && dotnet publish -c Debug"
   },
