--- a/src/Core/package.json
+++ b/src/Core/package.json
@@ -14,15 +14,15 @@
   "dependencies": {
     "@granite-elements/granite-c3": "3.2.0",
     "@polymer/decorators": "3.0.0",
-    "@polymer/iron-list": "3.0.0-pre.25",
-    "@polymer/paper-button": "3.0.0-pre.25",
-    "@polymer/paper-card": "3.0.0-pre.25",
-    "@polymer/paper-input": "3.0.0-pre.25",
-    "@polymer/paper-item": "3.0.0-pre.25",
-    "@polymer/paper-spinner": "3.0.0-pre.25",
-    "@polymer/paper-toast": "3.0.0-pre.25",
+    "@polymer/iron-list": "3.0.1",
+    "@polymer/paper-button": "3.0.1",
+    "@polymer/paper-card": "3.0.1",
+    "@polymer/paper-input": "3.0.1",
+    "@polymer/paper-item": "3.0.1",
+    "@polymer/paper-spinner": "3.0.1",
+    "@polymer/paper-toast": "3.0.1",
     "@polymer/polymer": "3.0.5",
-    "@webcomponents/webcomponentsjs": "2.1.1",
+    "@webcomponents/webcomponentsjs": "2.1.3",
     "c3": "0.6.7"
   },
   "devDependencies": {
