--- a/src/Core/Termy.csproj
+++ b/src/Core/Termy.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="KubernetesClient" Version="1.3.1-gdf3381607a" />
+    <PackageReference Include="KubernetesClient" Version="1.3.7-g7c9cc88d38" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
