--- a/src/Core/assets/terminal.yml
+++ b/src/Core/assets/terminal.yml
@@ -36,6 +36,10 @@ spec:
         - name: secrets
           readOnly: true
           mountPath: /etc/secrets
+        resources:
+          limits:
+            memory: "4Gi"
+            cpu: "2000m"
       volumes:
       - name: secrets
         secret:
