--- a/src/Core/Termy.csproj
+++ b/src/Core/Termy.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="KubernetesClient" Version="1.3.7-g7c9cc88d38" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.4" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
