--- a/src/Core/assets/terminal.yml
+++ b/src/Core/assets/terminal.yml
@@ -37,6 +37,9 @@ spec:
           readOnly: true
           mountPath: /etc/secrets
         resources:
+          requests:
+            memory: "100Mi"
+            cpu: "100m"
           limits:
             memory: "4Gi"
             cpu: "2000m"
